--- a/celtic_couple_blog/pages/templates/pages/contact.html
+++ b/celtic_couple_blog/pages/templates/pages/contact.html
@@ -99,9 +99,6 @@
     <div class="container">
         <h1>Contact Us</h1>
         <div class="row align-items-center">
-            <div class="col-md-6 mb-4">
-                <img src="{% static 'images/contact_us.jpg' %}" alt="Contact The Celtic Couple" class="img-fluid">
-            </div>
             <div class="col-md-6">
                 <h3>Get in Touch</h3>
                 <p>Whether you have questions, suggestions, or would like to collaborate, we're here to listen and engage. Reach out to us through any of the methods below, and we'll get back to you as soon as possible.</p>
@@ -111,11 +108,13 @@
                 </ul>
                 <a href="" class="btn btn-custom-danger">Contact Us</a>
             </div>
+            <div class="col-md-6 mb-4">
+                <img src="{% static 'images/layby.jpg' %}" alt="Contact The Celtic Couple" class="img-fluid">
+            </div>
+     
         </div>
 
-        <!-- Optional: Contact Form Section -->
-        <!-- Uncomment and customise if you wish to include a contact form directly on the page -->
-        {# 
+      
         <div class="contact-form">
             <h3>Send Us a Message</h3>
             <form action="https://web3forms.com/submit" method="POST">
@@ -135,7 +134,7 @@
                 <button type="submit" class="btn btn-custom-danger">Send</button>
             </form>
         </div>
-        #}
+       
     </div>
 </section>
 {% endblock %}
