--- a/celtic_couple_blog/blog/templates/blog/blog_index_page.html
+++ b/celtic_couple_blog/blog/templates/blog/blog_index_page.html
@@ -223,7 +223,7 @@ body {
 
 {% block content %}
 <!-- Hero Section (Maroon Overlay + Hero Image) -->
-<section id="blog-hero" style="background-image: url('{% static 'images/hero-background.jpg' %}');">
+<section id="blog-hero" style="background-image: url('{% static 'images/blog-hero.jpg' %}');">
     <div class="container">
         <h1>Welcome to Our Adventures</h1>
         <p class="lead">
