--- a/celtic_couple_blog/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/celtic_couple_blog/templates/base.html
@@ -60,6 +60,7 @@
                     <a class="nav-link" href="/contact/">Contact</a>
                     <a class="nav-link" href="/work-with-us/">Work With Us</a>
                     <a  class="nav-link" href="/cms/blog/" >Blog</a>
+                    <a  class="nav-link" href="/gallery" >Gallery</a>
                 </div>
 
                 <!-- Hamburger Menu for Mobile -->
@@ -75,6 +76,7 @@
                 <a href="/contact/" class="dropdown-item">Contact</a>
                 <a href="/work-with-us/" class="dropdown-item">Work With Us</a>
                 <a href="/cms/blog/" class="dropdown-item">Blog</a>
+                <a  class="dropdown-item" href="/gallery" >Gallery</a>
             </div>
         </nav>
     </header>
@@ -106,6 +108,7 @@
                         <li><a href="/contact/" class="text-decoration-none ">Contact</a></li>
                         <li><a href="/work-with-us/" class="text-decoration-none ">Work With Us</a></li>
                         <li><a href="/cms/blog/" class="text-decoration-none ">Blog</a></li>
+                        <li><a href="/gallery" class="text-decoration-none ">Gallery</a></li>
                     </ul>
                 </div>
 
