--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -301,7 +301,7 @@
     <div class="container d-flex flex-column justify-content-center align-items-center h-100">
         <h1 class="display-4">Adventure Awaits</h1>
         <p class="lead">Join us as we explore the world and celebrate our Celtic heritage.</p>
-        <a href="/cms/blog/" class="btn btn-custom-primary">Read Our Blog</a>
+        <a href="/cms/blog-index-page/" class="btn btn-custom-primary">Read Our Blog</a>
     </div>
 </section>
 
