--- a/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/templates/base.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="/about/">About</a>
                     <a class="nav-link" href="/contact/">Contact</a>
                     <a class="nav-link" href="/work-with-us/">Work With Us</a>
-                    <a  class="nav-link" href="/cms/blog/" >Blog</a>
+                    <a  class="nav-link" href="/cms/blog-index-page/" >Blog</a>
                     <a  class="nav-link" href="/gallery" >Gallery</a>
                 </div>
 
@@ -76,7 +76,7 @@
                 <a href="/about/" class="dropdown-item">About</a>
                 <a href="/contact/" class="dropdown-item">Contact</a>
                 <a href="/work-with-us/" class="dropdown-item">Work With Us</a>
-                <a href="/cms/blog/" class="dropdown-item">Blog</a>
+                <a href="/cms/blog-index-page/" class="dropdown-item">Blog</a>
                 <a  class="dropdown-item" href="/gallery" >Gallery</a>
             </div>
         </nav>
@@ -108,7 +108,7 @@
                         <li><a href="/about/" class="text-decoration-none ">About</a></li>
                         <li><a href="/contact/" class="text-decoration-none ">Contact</a></li>
                         <li><a href="/work-with-us/" class="text-decoration-none ">Work With Us</a></li>
-                        <li><a href="/cms/blog/" class="text-decoration-none ">Blog</a></li>
+                        <li><a href="/cms/blog-index-page/" class="text-decoration-none ">Blog</a></li>
                         <li><a href="/gallery" class="text-decoration-none ">Gallery</a></li>
                     </ul>
                 </div>
