--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -350,7 +350,7 @@
 <section id="general-blog-link" class="general-blog-link red-section text-center py-5">
     <div class="container">
         <h2 class="section-title mb-4">Explore More Stories</h2>
-        <a href="/cms/blog/" class="btn btn-secondary btn-lg">Visit Our Blog</a>
+        <a href="/cms/blog-index-page/" class="btn btn-secondary btn-lg">Visit Our Blog</a>
     </div>
 </section>
 
