--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -111,10 +111,12 @@
     <div class="container">
         <h2 class="section-title">Welcome to Our World</h2>
         <p class="mb-4">
-            We are Dave and Georgina Roberts, living near the outskirts of Snowdonia National Park in North West Wales. By day, Dave works in the hospital, proudly serving the local community, while Georgina is an avid creative, capturing life’s best moments on camera. Our shared passion for travel, Celtic heritage, and exploring new places inspired us to start this blog.
+            We are Dave and Georgina Roberts, living near the outskirts of Snowdonia National Park in North West Wales. By day, Georgina and Dave work in the local the hospital. Outside of work, we enjoy walking and cycling whenever we can.
         </p>
         <p class="mb-4">
-            From scenic countryside walks to big city excursions, we hope our adventures spark your curiosity and encourage you to pack your bags for your own unforgettable journey.
+            Our shared passion for travel, Celtic heritage, and exploring new places inspired us to start this blog.
+        </p><p class="mb-4">
+            From scenic countryside walks to exotic adventures abroad. We hope our adventures spark your curiosity and encourage you to pack your bags for your own unforgettable journey.
         </p>
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -123,6 +125,11 @@
         </div>
     </div>
 </section>
+
+
+
+
+
 
 <!-- SECTION 2: Our Background (Off-White Background, Maroon Text) -->
 <section class="offwhite-section">
